corpus/delimiter-index-should-resume-correctly.txt
====================
Delimiter index tracking should resume at the correct position
====================

---
-
---
<div>
<!-- The `-` above should not stop the scanner from recognizing the frontmatter end token -->
</div>

--------------------

(document
  (frontmatter
    (raw_text))
  (element
    (start_tag
      (tag_name))
    (comment)
    (end_tag
      (tag_name))))
