corpus/eat-last-curly-brace-of-interpolated-attribute.txt
============================================================
Eat the last curly brace of the interpolated attribute (#14)
============================================================

<div style={{ fontSize: '16px' }}>
</div>

<div style={{ fontSize: '16px' } }>
</div>

--------------------

(fragment
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (interpolation
          (raw_text))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (interpolation
          (raw_text))))
    (end_tag
      (tag_name))))
