corpus/empty-frontmatter.txt
====================
Empty frontmatter should parse correctly
====================

---
---
<div>
</div>

--------------------

(document
  (frontmatter
    (raw_text))
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))
