corpus/interpolated-string-doesnt-need-to-have-balanced-braces.txt
========================================================================================
Interpolated strings don't need to have balanced braces (if they're escaped by comments)
========================================================================================

---
`${
// the fake ending }
} the real ending`
---

<html />

------------------------

(fragment
   (frontmatter
      (raw_text))
   (element
      (self_closing_tag
         (tag_name))))
