corpus/string-directly-before-frontmatter-end.txt
====================
Strings directly before the end marker should work
====================

---
/* string directly before end marker */ "x"
---
<p> Hi! </p>

--------------------

(fragment
  (frontmatter
    (raw_text))
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name))))
