corpus/three-hyphens-in-frontmatter.txt
====================
Three hyphens in frontmatter
====================

---
const myArray = [-1, -2, -3];
---

<h1>Hello world!</h1>

--------------------

(document
  (frontmatter
    (raw_text))
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name))))
